# senior-design-project-r-availability

./: .gitignore  CMakeLists.txt  Procfile  README.md  getDataFromMDB.py  motion.cpp  package-lock.json  package.json  server.js  test.cpp  test_motion.cpp  uploadToMongo.py
models/: TTP.js  Users.js  userFavoriteRoom.js
reactwebsite/: .env  package-lock.json  package.json
reactwebsite/public/: UCRmap2  index.html
reactwebsite/src/: App.css  App.js  Login.js  Title.css  Title.js  index.js
reactwebsite/src/components/: Header.js  LoginButton.css  LoginButton.js  LogoutButton.js  Navbar.css  Navbar.js  PlaceToVisit.js  PrivateRoute.js  Profile.js  recordlist.js
reactwebsite/src/components/Navbar/: MenuItems.js  Navbar.css  Navbar.js
reactwebsite/src/pages/: About.css  About.js  Bytes.js  Home.css  Home.js  Orbach.js  Room.js  TTP.js  UserProfile.css  UserProfile.js  card.js  index.js  landing.css  landing.js  places.js
reactwebsite/src/static/: places.js
reactwebsite/src/views/: profile.js
websiteserver/: config.env  package-lock.json  package.json  server.js
websiteserver/models/: Bytes.js  Orbach.js  TTP.js
websiteserver/routes/: record.js
